--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id("kotlin-parcelize")
 }
+apply from: '../shared_dependencies.gradle'
 
 android {
     namespace 'com.bukanibam.movieclub'
@@ -25,73 +27,27 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding = true
     }
-}
-
-ext {
-    kotlin_version = '1.4.10'
-    appcompat_version = "1.1.0"
-    core_ktx_version = "1.3.2"
-    constraint_version = "2.0.4"
-    legacy_support_version = "1.0.0"
-    junit_version = "4.13.1"
-    androidx_junit_version = "1.1.2"
-    espresso_version = "3.3.0"
-    multidex_version = "2.0.1"
-
-    cardview_version = "1.0.0"
-    recyclerview_version = "1.1.0"
-    material_version = "1.2.1"
-    glide_version = "4.11.0"
-
-    room_version = "2.2.5"
-
-    retrofit_version = "2.9.0"
-    logging_interceptor_version = '4.9.0'
-
-    kotlin_coroutines_version = "1.3.9"
-    lifecycle_version = "2.5.1"
-
-    koin_version = "2.1.6"
+    dynamicFeatures = [':favorite']
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.10"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
-    implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
-    testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    implementation project(":core")
 
-    implementation "androidx.cardview:cardview:$cardview_version"
-    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-    implementation "com.google.android.material:material:$material_version"
-    implementation "com.github.bumptech.glide:glide:$glide_version"
+    // viewpger2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    androidTestImplementation "androidx.room:room-testing:$room_version"
-
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
-    implementation "org.koin:koin-core:$koin_version"
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
+    // navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+    implementation "androidx.fragment:fragment-ktx:1.6.0"
 }
